# wibotic_ros

./: CMakeLists.txt  README  README.md  package.xml
help/: Wibotic.html
msg/: Device.msg  RX.msg  TX.msg  Wibotic.msg
scripts/: packet_tools.py  wibotic.py  wibotic_msg_funcs.py
