<?xml version="1.0"?>
<package format="2">
  <name>wibotic_ros</name>
  <version>0.0.0</version>
  <description>The wibotic_ros package</description>
  <maintainer email="skavi@clearpathrobotics.com">Shrey Kavi</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/wibotic_ros</url> -->

  <author email="skavi@clearpathrobotics.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python-ws4py</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
